# JamFlow

./: .env.docker-compose  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  nginx.dev.conf  renovate.json
.github/workflows/: backend-lint.yaml  backend-test.yaml  build-and-publish.yaml  build-backend.yaml  frontend-build.yaml  frontend-lint.yaml  frontend-test.yaml  lint-backend.yaml  lint-frontend.yaml  test-backend.yaml
backend/: .env.example  .env.test  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  pyright.json  pyrightconfig.json  pytest.ini
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 52a7fcb85c40_init.py
backend/jamflow/: main.py  utils.py
backend/jamflow/api/: deps.py  exception_handlers.py
backend/jamflow/api/v1/: __init__.py
backend/jamflow/api/v1/routes/: clip.py  track.py
backend/jamflow/auth/: models.py
backend/jamflow/core/: app.py  config.py  database.py  db.py  exceptions.py  log.py  middlewares.py
backend/jamflow/migrations/: env.py
backend/jamflow/models/: __init__.py  base.py  clip.py  enums.py  track.py  user.py  utils.py
backend/jamflow/repositories/: __init__.py  clip.py  primitives.py  track.py  types.py
backend/jamflow/schemas/: clip.py  error.py  track.py  types.py  validators.py
backend/jamflow/services/: audio.py  clip.py  exceptions.py  track.py  utils.py
backend/jamflow/services/exceptions/: __init__.py  base.py  validation.py
backend/jamflow/services/storage/: __init__.py  s3.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 149a5dc9c5fa_create_model_track.py  3b7b8e131166_create_model_track.py  51bd11e0e3f1_create_user.py  537fa7739c38_create_model_track.py  9aea445a2f15_create_model_track.py  a05d9e6adc1f_create_model_clip.py  bfa19db58041_create_model_clip.py  e667b2dccbfd_create_model_clip.py  faf55838d5e5_create_model_track.py
backend/scripts/: entrypoint.sh  lint.sh  test.sh
backend/tests/: conftest.py  test_main.py  utils.py
backend/tests/fixtures/: __init__.py  app.py  database.py  files.py  http.py  log.py  storage.py
backend/tests/functional/: conftest.py  test_aduio_workflow.py
backend/tests/integration/: __init__.py  conftest.py  test_clip_routes.py  test_database.py  test_exception_handlers.py  test_middlewares.py  test_s3_storage.py  test_track_routes.py
backend/tests/test_api/: conftest.py  test_clip_routes.py  test_exception_handlers.py  test_track_routes.py
backend/tests/test_core/: test_database.py  test_db.py
backend/tests/test_schemas/: test_track_schema.py  test_validators.py
backend/tests/test_services/: test_audio_service.py  test_clip_service.py  test_s3_storage.py  test_s3_storage_integration.py  test_s3_storage_unit.py  test_storage.py  test_track_service.py
backend/tests/unit/: conftest.py  test_audio_service.py  test_clip_schema.py  test_clip_service.py  test_exceptions.py  test_model_enums.py  test_s3_storage.py  test_serivce_utils.py  test_track_schema.py  test_track_service.py  test_utils.py  test_validators.py
docs/specs/: audio-clipping-ux.md
frontend/: .env.example  .env.test  .gitignore  .prettierignore  Dockerfile  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts  vitest.setup.ts
frontend/docker/: nginx.conf  runtime-config.env.js
frontend/scripts/: entrypoint.sh
frontend/src/: App.test.tsx  errors.ts  index.css  main.tsx  routes.ts  routes.tsx  types.ts
frontend/src/api/: client.ts  clips.ts  errorHandler.test.ts  errorHandler.ts  mappers.test.ts  mappers.ts  tracks.test.ts  tracks.ts  types.ts
frontend/src/components/: AudioPlayer.tsx  AudioPlayerContainer.test.tsx  AudioPlayerContainer.tsx  AudioPlayerController.tsx  MuteToggle.tsx  Notification.tsx  NotificationContainer.tsx  TrackItem.tsx  UploadForm.test.tsx  UploadForm.tsx
frontend/src/config/: app.ts
frontend/src/contexts/: AudioPlayerContext.ts  AudioPlayerProvider.tsx  NotifcationContext.ts  NotificationContext.ts  NotificationProvider.test.tsx  NotificationProvider.tsx  PlayableContext.ts  PlayableProvider.tsx  PlaybackContext.ts  PlaybackProvider.tsx
frontend/src/hooks/: useAudioPlayer.test.ts  useAudioPlayer.ts  useAutoloadPlayable.ts  useClip.ts  useClipList.ts  useClipper.ts  useClipperViewBounds.tsx  usePlayback.test.ts  usePlayback.ts  useProgressBar.ts  useTrack.ts  useTrackList.test.ts  useTrackList.ts  useUploadForm.test.tsx  useUploadForm.ts
frontend/src/lib/: clipboard.ts  errorUtils.test.ts  errorUtils.ts  logging.test.ts  logging.ts  time.test.ts  time.ts  utils.ts
scripts/: docker-build-and-push.sh  install-hooks.sh  setup-dev.sh
scripts/hooks/: pre-commit
(+86 files in other folders)
