[project]
name = "JamFlow-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Web
  "fastapi[standard]>=0.115.7",
  # Configuration
  "pydantic-settings>=2.7.1",
  # Database
  "asyncpg>=0.30.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.14.1",
]

[dependency-groups]
dev = [
  # Code quality
  "pre-commit>=4.1.0",
  "ruff>=0.9.3",
]
test = [
  # Testing
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "pytest-asyncio>=0.25.3",
  "pytest-env>=1.1.5",
  "pytest-order>=1.3.0",
]

[tool.basedpyright]
typeCheckingMode = "strict"
ignore = []

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG001", # unused arguments in functions
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
# https://pytest-asyncio.readthedocs.io/en/latest/reference/configuration.html
asyncio_mode = "auto"
# https://github.com/pytest-dev/pytest-env?tab=readme-ov-file#via-pytest-configurations
env = ["ENV_FILE=./.env.test"]
