[project]
name = "JamFlow-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Web
  "fastapi[standard]>=0.115.7",
  "uvicorn>=0.34.0",
  # Configuration
  "pydantic-settings>=2.7.1",
  # Database
  "asyncpg>=0.30.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.14.1",
  # Logging
  "structlog>=25.1.0",
  # File storage
  "aiobotocore>=2.19.0",
  # Audio processing
  "filetype>=1.2.0",
  "mutagen>=1.47.0",
  "pydub>=0.25.1",
  "audioop-lts>=0.2.1", # pydub dependency
]

[dependency-groups]
dev = [
  # Type checking
  "mypy>=1.15.0",
  "types-aiobotocore[s3]>=2.19.0",
  # Code quality
  "pre-commit>=4.1.0",
  "ruff>=0.9.3",
  "rich>=13.9.4",
]
test = [
  # Testing
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "pytest-asyncio>=0.25.3",
  "pytest-mock>=3.14.0",
  "pytest-structlog>=1.1",
]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG001", # unused arguments in functions
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
strict = true
exclude = ["^migrations/", "^tests/", "^.*/__pycache__/", "^.venv/"]

[tool.ruff.lint.per-file-ignores]
# Ignore star import for migration generation
"migrations/env.py" = ["F403"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
# https://pytest-asyncio.readthedocs.io/en/latest/reference/configuration.html
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
filterwarnings = ["ignore::DeprecationWarning:botocore.auth"]
